# StorageHelper

./: CMakeLists.txt  LICENSE  README.md
include/: filescanworker.h  fileutils.h  mainwindow.h
src/: filescanworker.cpp  fileutils.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
